force-app/main/default/objects/Order/fields/Fulfilled_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox if set to true means the email was sent to the customer when the status was changed to Fulfiled. The email won&apos;t be sent again, so the</description>
    <label>Fulfilled Email Sent</label>
    <type>Checkbox</type>
</CustomField>