force-app/main/default/objects/Order/fields/isOrderSendToNpsFailed__c.field-meta.xml
<CustomField>
    <fullName>isOrderSendToNpsFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Order Send To Nps Failed</label>
    <type>Checkbox</type>
</CustomField>