force-app/main/default/objects/Order/fields/NPS_Integration_Response_Info__c.field-meta.xml
<CustomField>
    <fullName>NPS_Integration_Response_Info__c</fullName>
    <label>NPS Integration Response Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>