force-app/main/default/objects/Order/fields/NPS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>NPS_Integration_Status__c</fullName>
    <label>NPS Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILURE</fullName>
            </value>
            <value>
                <fullName>RETRY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>