force-app/main/default/objects/Order/fields/NPS_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>NPS_Response_Status__c</fullName>
    <label>NPS Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>