force-app/main/default/objects/Order/fields/NPS_service_already_triggered__c.field-meta.xml
<CustomField>
    <fullName>NPS_service_already_triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicating whether the NPS service has already been called; to prevent duplicate emails being sent</description>
    <label>NPS service already triggered</label>
    <type>Checkbox</type>
</CustomField>